authbackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authbackend-deployment
  namespace: fit-namespace
spec:
  selector:
    matchLabels:
      app: authbackend-app
  replicas: 1
  template:
    metadata:
      labels:
        app: authbackend-app
    spec:
      dependencies:
      - name: mongodb-deployment
      containers:
        - name: authbackend-container
          image: arthuracrs/fit-auth-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
