backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: fit-namespace
spec:
  selector:
    matchLabels:
      app: backend-app
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-container
          image: arthuracrs/fit-backend:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
