backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: fit-namespace
spec:
  selector: 
    app: backend-app
  ports:
    - port: 80
      targetPort: 3000
