dev-mongodb-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  # namespace: fit-namespace
  namespace: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6
          ports:
            - containerPort: 27017
          args: ["--dbpath", "/data/db"]
          volumeMounts:
            - name: "mongo-data-dir"
              mountPath: "/data/db"
      volumes:
        - name: "mongo-data-dir"
          persistentVolumeClaim:
            claimName: "mongo-data"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service-ext
  # namespace: fit-namespace
  namespace: mongo
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 32000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: mongodbserviceint
  # namespace: fit-namespace
  namespace: mongo
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  # namespace: fit-namespace
  namespace: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongo-express-service
#   # namespace: fit-namespace
#   namespace: mongo
# spec:
#   selector:
#     app: mongo-express
#   ports:
#     - name: mongo-express
#       protocol: TCP
#       port: 8081
#       targetPort: 8081
#       nodePort: 32001
#   type: NodePort
---
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongodb-express
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
