frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fit-namespace
spec:
  selector: 
    app: frontend-app
  ports:
    - port: 80
      targetPort: 3002
