ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fit-ingress
  namespace: fit-namespace
spec:
  rules:
  - host: "api.fit.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 80
  - host: "fit.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
